fix : z-index

--- a/src/components/cart/QuickAddModal.module.scss
+++ b/src/components/cart/QuickAddModal.module.scss
@@ -9,7 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 9;
+  z-index: 101;
   animation: fadeIn 0.2s ease-out;
 }
 
